--- a/Prototype/index.css
+++ b/Prototype/index.css
@@ -3,7 +3,7 @@ body, html {margin:0; padding:0;}
 #mainbody {
   position: relative;
   width: 100%;
-  height: 100%;
+  height: 50%;
 }
 
 #main-left {
@@ -12,11 +12,13 @@ body, html {margin:0; padding:0;}
   height: 100%;
   float: left;
   border: 1px solid green;
+  overflow-y:
 }
 
 #main-right {
   position: relative;
   width: calc(35% - 8px);
+  height: 100%;
   float: right;
   border: 1px solid red;
 }
@@ -27,6 +29,7 @@ body, html {margin:0; padding:0;}
   overflow-y: scroll;
   height: 100%;
 }
+
 
 .scrollbox {
   position: relative;
